--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 /* the container */
 .twohop-links-container {
   margin-top: 20px;
+  max-width: var(--max-width);
+  margin: 0 0 0 calc(50% - var(--max-width) / 2) !important;
+  /* padding-left: var(--folding-offset); */
 }
 
 /* common */
@@ -12,59 +15,72 @@
 
 .twohop-links-box {
   box-sizing: border-box;
-  border: 1px solid #224433;
   float: left;
-  padding: 3px;
+  padding: 10px;
   margin: 8px;
-  color: #224433;
-  background-color: antiquewhite;
-  border-radius: 4px;
+  background-color: #373b44;
+  border-radius: 2px;
   overflow: hidden;
 }
+
+.twohop-links-box:hover {
+  filter: brightness(0.8) contrast(0.8);
+}
+
 .twohop-links-box-title {
+  color: #f0f0f0;
+  font-style: bold;
+  margin-bottom: 15px;
   display: -webkit-box;
   overflow: hidden;
-  /*-webkit-line-clamp: 3;*/
   -webkit-box-orient: vertical;
 }
+
+.twohop-links-box:not([class*=" "]) {
+  border-top: 10px solid #2b2e38;
+}
+
 .twohop-links-box-preview {
-  color: #224433;
+  color: #b4b5b6;
   font-size: 70%;
 }
+
 .twohop-links-box img {
   margin: auto;
 }
 
 /* connected links */
-.twohop-links-forward-links .twohop-links-connected-links-header {
-  background-color: darkkhaki;
-}
-.twohop-links-back-links .twohop-links-connected-links-header {
-  background-color: salmon;
+.twohop-links-connected-links-header {
+  background-color: #80c9fe;
+  color: #202277;
 }
 
 /* two hop links */
-.twohop-links-resolved .twohop-links-twohop-header {
-  clear: both;
-  background-color: burlywood;
-}
-.twohop-links-unresolved .twohop-links-twohop-header {
-  clear: both;
-  background-color: dimgrey;
+.twohop-links-twohop-header {
+  /* clear: both; */
+  background-color: #2b2e38;
+  color: #dddede;
 }
 
 /* tags */
 .twohop-links-tag-header {
-  clear: both;
-  background-color: darkseagreen;
+  /* clear: both; */
+  background-color: #46af5d;
+  color: #ffffff;
 }
 
 /* new links */
 .twohop-links-new-links-header {
-  background-color: palevioletred;
+  background-color: #fb7476;
+  color: #ffffff;
 }
 
 /* Remove bottom padding in preview mode */
 .markdown-preview-section {
-  padding-bottom: 10px !important;
+  padding-bottom: 20px !important;
+}
+
+/* Remove bottom padding in editor mode */
+div.cm-content {
+  padding-bottom: 30px !important;
 }
