--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
+/* switch light/dark mode */
+.theme-light {
+  --bg-box: #fafafb;
+  --bg-box-top: #e2e2e2;
+  --title-box: #363c49;
+  --text-box: #b7b7b7;
+  --bg-header-twohop: #9babc1;
+  --title-header-twohop: #ffffff;
+  --bg-header-new: #fd7373;
+  --title-header-new: #ffffff;
+  --bg-header-connected: #5e8af6;
+  --title-header-connected: #ffffff;
+  --bg-header-tag: #46af5d;
+  --title-header-tag: #ffffff;
+}
+
+.theme-dark {
+  --bg-box: #373b44;
+  --bg-box-top: #2b2e38;
+  --title-box: #f0f0f0;
+  --text-box: #b4b5b6;
+  --bg-header-twohop: #2b2e38;
+  --title-header-twohop: #dddede;
+  --bg-header-new: #fb7476;
+  --title-header-new: #ffffff;
+  --bg-header-connected: #80c9fe;
+  --title-header-connected: #202277;
+  --bg-header-tag: #46af5d;
+  --title-header-tag: #ffffff;
+}
+
 /* the container */
 .twohop-links-container {
   margin-top: 20px;
@@ -18,7 +49,7 @@
   float: left;
   padding: 10px;
   margin: 8px;
-  background-color: #373b44;
+  background-color: var(--bg-box);
   border-radius: 2px;
   overflow: hidden;
 }
@@ -28,7 +59,7 @@
 }
 
 .twohop-links-box-title {
-  color: #f0f0f0;
+  color: var(--title-box);
   font-style: bold;
   margin-bottom: 15px;
   display: -webkit-box;
@@ -36,43 +67,42 @@
   -webkit-box-orient: vertical;
 }
 
-.twohop-links-box:not([class*=" "]) {
-  border-top: 10px solid #2b2e38;
-}
-
-.twohop-links-box-preview {
-  color: #b4b5b6;
-  font-size: 70%;
-}
-
 .twohop-links-box img {
   margin: auto;
 }
 
+/* Non-header box */
+.twohop-links-box:not([class*=" "]) {
+  border-top: 10px solid var(--bg-box-top);
+}
+
+.twohop-links-box-preview {
+  color: var(--text-box);
+  font-size: 70%;
+}
+
 /* connected links */
 .twohop-links-connected-links-header {
-  background-color: #80c9fe;
-  color: #202277;
+  background-color: var(--bg-header-connected);
+  color: var(--title-header-connected);
 }
 
 /* two hop links */
 .twohop-links-twohop-header {
-  /* clear: both; */
-  background-color: #2b2e38;
-  color: #dddede;
+  background-color: var(--bg-header-twohop);
+  color: var(--title-header-twohop);
 }
 
 /* tags */
 .twohop-links-tag-header {
-  /* clear: both; */
-  background-color: #46af5d;
-  color: #ffffff;
+  background-color: var(--bg-header-tag);
+  color: var(--title-header-tag);
 }
 
 /* new links */
 .twohop-links-new-links-header {
-  background-color: #fb7476;
-  color: #ffffff;
+  background-color: var(--bg-header-new);
+  color: var(--title-header-new);
 }
 
 /* Remove bottom padding in preview mode */
