埋め込むときに2hoplinksが表示されてしまう問題を修正

--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,7 @@
 div.cm-content {
   padding-bottom: 30px !important;
 }
+
+.markdown-embed-content .twohop-links-container {
+  display: none;
+}
