--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@
   border-radius: 2px;
   overflow: hidden;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .twohop-links-box:hover {
