画像のカーソルがzoom inになってしまう問題を修正

--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,7 @@ div.cm-content {
 .markdown-embed-content .twohop-links-container {
   display: none;
 }
+
+body:not(.zoom-off) .view-content div:not(.canvas-node-content) .twohop-links-box img {
+    cursor: pointer !important;
+}
