--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
   overflow: hidden;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  word-break: break-word;
 }
 
 .twohop-links-box:hover {
