長押ししたときに文字が選択されてしまう問題を修正

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,9 @@
 
 /* the container */
 .twohop-links-container {
-  margin-bottom: 40px
+  margin-bottom: 40px;
+  user-select: none;
+  -webkit-user-select: none;
 }
 .twohop-links-section {
   display: grid;
