--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,7 @@ body:not(.zoom-off) .view-content div:not(.canvas-node-content) .twohop-links-bo
 .load-more-button {
   width: -webkit-fill-available;
 }
+
+.TwoHopLinks {
+  overflow: auto;
+}
