設定ボタン上でのカーソルをポインターに変更

--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,7 @@ body:not(.zoom-off) .view-content div:not(.canvas-node-content) .twohop-links-bo
 .TwoHopLinks {
   overflow: auto;
 }
+
+.settings-button {
+  cursor: pointer;
+}
