--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root{
+  --box-width: 139px;
+  --box-height: 170px;
+}
 /* switch light/dark mode */
 .theme-light {
   --bg-box: #ffffff;
@@ -37,7 +41,7 @@
 }
 .twohop-links-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(139px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(var(--box-width), 1fr));
   grid-gap: 8px;
   margin: 20px;
 }
@@ -45,7 +49,7 @@
 /* common */
 .twohop-links-box {
   box-sizing: border-box;
-  max-height: 170px;
+  max-height: var(--box-height);
   padding: 10px;
   background-color: var(--bg-box);
   border-radius: 2px;
@@ -124,8 +128,12 @@ div.cm-content {
   display: none;
 }
 
-body:not(.zoom-off) .view-content div:not(.canvas-node-content) .twohop-links-box img {
-    cursor: pointer !important;
+body:not(.zoom-off)
+  .view-content
+  div:not(.canvas-node-content)
+  .twohop-links-box
+  img {
+  cursor: pointer !important;
 }
 
 .load-more-button {
@@ -142,3 +150,23 @@ body:not(.zoom-off) .view-content div:not(.canvas-node-content) .twohop-links-bo
 .settings-button {
   cursor: pointer;
 }
+
+/* @settings
+
+name: 2Hop Links Plugin Plus
+id: obsidian-2hop-links-plugin-plus
+settings:
+    -
+        id: box-width
+        title: Box min width
+        type: variable-number
+        default: 139
+        format: px
+    -
+        id: box-height
+        title: Box max height
+        type: variable-number
+        default: 170
+        format: px
+
+*/
