--- a/styles.css
+++ b/styles.css
@@ -155,8 +155,8 @@ body:not(.zoom-off)
 
 /* @settings
 
-name: 2Hop Links Plugin Plus
-id: obsidian-2hop-links-plugin-plus
+name: 2Hop Links Plus
+id: 2hop-links-plus
 settings:
     -
         id: box-width
