--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ body:not(.zoom-off)
 /* @settings
 
 name: 2Hop Links Plugin Plus
-id: obsidian-2hop-links-plugin-plus
+id: 2hop-links-plus
 settings:
     -
         id: box-width
